--- a/css/screen.css
+++ b/css/screen.css
@@ -65,6 +65,53 @@ body {
 }
 
 /*
+  Components: Type
+  ---
+  Special typography classes
+*/
+
+.c-type-meta {
+  font-size: 14px;
+  font-family: "Inter UI", "Helvetica Neue", Helvetica, arial, sans-serif;
+  line-height: 16px;
+  margin-top: 4px;
+}
+
+/*
+  Components: Author
+*/
+
+.c-author {
+  display: flex;
+  align-items: center;
+  margin-bottom: 48px;
+}
+
+.c-author__image {
+  width: 56px;
+  height: 56px;
+  border-radius: 100%;
+  margin-right: 16px;
+}
+
+.c-author__caption {
+  padding-top: 0;
+}
+
+.c-author__name, .c-author__meta {
+  margin-bottom: 0;
+}
+
+.c-author__name {
+  font-size: 16px;
+  line-height: 16px;
+}
+
+/*
+  Utilities: Spacing
+  ---
+  Utility classes to put specific spacing values onto elements.
+/*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
  *
@@ -104,7 +151,6 @@ h1 {
   font-size: 36px;
   line-height: 40px;
   margin: 0 0 24px;
-  font-family: "Playfair Display", serif;
 }
 
 h2 {
