--- a/css/screen.css
+++ b/css/screen.css
@@ -54,13 +54,11 @@ html {
   /*font-family: "Inter UI", "Helvetica Neue", Helvetica, arial, sans-serif; */
   font-family: "Droid Serif", Georgie, serif;
   color: #5C6366;
-  padding: 48px 24px 24px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 body {
-  max-width: 42em;
   margin: 0 auto;
 }
 
@@ -239,9 +237,7 @@ a:hover, a:focus {
 /* Medium devices (tablets, 768px and up) */
 
 @media (min-width: 768px) {
-  html {
-    padding: 48px 48px 24px;
-  }
+  html {}
   h1 {
     font-size: 58px;
     line-height: 64px;
