--- a/css/screen.css
+++ b/css/screen.css
@@ -51,11 +51,15 @@
 html {
   font-size: 16px;
   line-height: 1.5;
-  /*font-family: "Inter UI", "Helvetica Neue", Helvetica, arial, sans-serif; */
-  font-family: "Droid Serif", Georgie, serif;
+  font-family: "Droid Serif", Georgia, serif;
   color: #5C6366;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
 body {
@@ -103,6 +107,49 @@ body {
 .c-author__name {
   font-size: 16px;
   line-height: 16px;
+}
+
+/*
+  Components: article
+*/
+
+.c-article__header, .c-article__body {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.c-article__header {
+  padding: 24px 24px 0;
+}
+
+.c-article__body {
+  padding: 0 24px;
+}
+
+@media (min-width: 768px) {
+  .c-article__header {
+    padding: 48px 48px 24px;
+  }
+  .c-article__author {
+    padding-bottom: 24px;
+  }
+  .c-article__body {
+    padding: 24px 48px;
+  }
+}
+
+@media (min-width: 992px) {
+  .c-article__body {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .c-article__author {
+    width: 25%;
+    padding-right: 24px;
+  }
+  .c-article__content {
+    width: 75%;
+  }
 }
 
 /*
