--- a/css/screen.css
+++ b/css/screen.css
@@ -126,30 +126,41 @@ body {
   padding: 0 24px;
 }
 
+.c-article__date {
+  font-size: 14px;
+  line-height: 16px;
+  margin-bottom: 8px;
+}
+
 @media (min-width: 768px) {
-  .c-article__header {
-    padding: 48px 48px 24px;
-  }
-  .c-article__author {
-    padding-bottom: 24px;
-  }
-  .c-article__body {
-    padding: 24px 48px;
+  h1 {
+    font-size: 46px;
+    line-height: 56px;
   }
 }
 
 @media (min-width: 992px) {
-  .c-article__body {
-    display: flex;
-    flex-wrap: wrap;
+  h1 {
+    font-size: 52px;
+    line-height: 64px;
   }
-  .c-article__author {
-    width: 25%;
-    padding-right: 24px;
+}
+
+@media (min-width: 1200px) {
+  h1 {
+    font-size: 58px;
+    line-height: 72px;
   }
-  .c-article__content {
-    width: 75%;
-  }
+}
+
+/*
+  Utilities: max-width
+  ---
+  Utility classes to put specific max widths onto elements.
+*/
+
+.u-max-width-sm {
+  max-width: 36em;
 }
 
 /*
@@ -191,6 +202,41 @@ img {
     ---
     Default markup for typographic elements
 */
+
+@media (min-width: 768px) {
+  .c-article__header {
+    padding: 48px 48px 24px;
+  }
+  .c-article__author {
+    padding-bottom: 24px;
+  }
+  .c-article__body {
+    padding: 24px 48px;
+  }
+}
+
+@media (min-width: 992px) {
+  .c-article__body {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .c-article__author {
+    width: 25%;
+    padding-right: 24px;
+  }
+  .c-article__content {
+    width: 75%;
+  }
+}
+
+@media (min-width: 992px) {
+  .c-author {
+    display: block;
+  }
+  .c-author__image {
+    margin-bottom: 16px;
+  }
+}
 
 h1 {
   font-size: 36px;
